--- a/package.json
+++ b/package.json
@@ -22,26 +22,27 @@
     "compile:all": "npm-run-all compile:models compile:errHandler compile:authenticate compile:init-dev compile:seed compile:app compile:db copy:all",
     "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=development node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
-    "test": "cross-env NODE_ENV=test SEED_DB=true mocha",
+    "test": "cross-env NODE_ENV=test SEED_DB=true nyc mocha",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
   },
   "author": "Jiahan Chen",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.23.3",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.3",
-    "nodemon": "^3.0.1",
-    "@babel/cli": "^7.2.3",
     "chai": "^4.0.2",
     "cross-env": "^6.0.3",
     "mocha": "^8.1.3",
-    "supertest": "^4.0.2",
+    "ncp": "2.0.0",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.0",
-    "ncp": "2.0.0"
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
