--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "compile:all": "npm-run-all compile:models compile:errHandler compile:authenticate compile:init-dev compile:seed compile:app compile:db copy:all",
     "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=development node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
-    "test": "cross-env NODE_ENV=test SEED_DB=true nyc mocha",
+    "test": "cross-env NODE_ENV=test SEED_DB=true nyc --reporter=text-lcov mocha | coveralls",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
   },
@@ -35,8 +35,11 @@
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.3",
     "chai": "^4.0.2",
+    "coveralls": "^3.1.1",
+    "coveralls-next": "^4.2.0",
     "cross-env": "^6.0.3",
     "mocha": "^8.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
     "ncp": "2.0.0",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
