--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "compile:all": "npm-run-all compile:models compile:errHandler compile:authenticate compile:init-dev compile:seed compile:app compile:db copy:all",
     "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=development node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
-    "test": "cross-env NODE_ENV=develop SEED_DB=false nyc mocha",
+    "test": "cross-env NODE_ENV=development SEED_DB=false nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
