--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=development node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
     "test": "cross-env NODE_ENV=test SEED_DB=false nyc mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
   },
@@ -39,6 +39,7 @@
     "coveralls": "^3.1.1",
     "coveralls-next": "^4.2.0",
     "cross-env": "^6.0.3",
+    "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
     "mocha-lcov-reporter": "^1.3.0",
     "ncp": "2.0.0",
@@ -46,6 +47,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.0",
+    "sinon": "^17.0.1",
     "supertest": "^4.0.2"
   },
   "dependencies": {
