--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,14 +45,12 @@ test_api:
     - npm run coverage
 
 deploy_staging:
-  image: ruby:latest
+  image: node:latest
   only:
     - develop
   stage: staging
   before_script:
-    - apt-get update -qy
-    - apt-get install -y ruby-dev
-    - gem install dpl
-  script:  
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME_STAGING --api-key=$HEROKU_API_KEY
+    - npm install netlify-cli -g
+  script:
+    - netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod
     - echo "Deployed to staging server"
