--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "copy:public": "ncp ./public build/public",
     "copy:all": "npm-run-all copy:nodeModules copy:public",
     "compile:all": "npm-run-all compile:models compile:errHandler compile:authenticate compile:init-dev compile:seed compile:app compile:db copy:all",
-    "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=development node build/index.js",
+    "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=test node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
-    "test": "cross-env NODE_ENV=test SEED_DB=false nyc mocha",
+    "test": "cross-env NODE_ENV=test SEED_DB=true nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
