--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start:prod": "cross-env  MONGO_DB=mongodb://localhost/test NODE_ENV=test node build/index.js",
     "postinstall": "rimraf ./build && npm run compile:all",
     "test": "cross-env NODE_ENV=test SEED_DB=true nyc mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test:coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls --repo-token=$COVERALLS_REPO_TOKEN",
+    "coverage": "nyc report --reporter=text-lcov | coveralls --repo-token=$COVERALLS_REPO_TOKEN",
     "start": "babel-node index.js",
     "dev": " nodemon --exec npm start"
   },
