--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ Build_api:
 test_api:
   stage: test
   script:
-    - npm test
+    - npm run test:coveralls
   after_script:
     - npm run coverage
 
