--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,16 @@ deploy_staging:
   only:
     - develop
   stage: staging
+  services:
+    - mongo:latest
   before_script:
-    - npm install netlify-cli -g
+    - npm config set cache /tmp/npm-cache
+    - npm install -g netlify-cli
+    - apt-get update -qy
+    - apt-get install -y ruby-full
+    - gem install dpl
   script:
     - netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod
-    - echo "Deployed to staging server"
+    - echo "Already Deploy Netlify to pre publish server"
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME_STAGING --api-key=$HEROKU_API_KEY
+    - echo "Already Deploy Heroku to pre publish server"
